Day4/terraform/create-ec2-instance/imports.tf
import {
  to = aws_vpc.tektutor_vpc
  id = "vpc-0f25dd38d08a5bb99"
}

resource "aws_vpc" "tektutor_vpc" {
}

//import {
//  to =  aws_security_group.tektutor_security_group 
//  id = "sg-042d26788b6143a3d"
//}

//resource "aws_security_group" "tektutor_security_group" { }
